# potato-launcher

./: .gitignore  Cargo.toml  build.env  docker-compose.yml  flake.nix
.github/workflows/: build-images.yml  build-launcher.yml  check.yml  docs.yml
backend/: Dockerfile
backend/internal/api/: converters.go  types.go
backend/internal/config/: config.go
backend/internal/models/: models.go
backend/internal/services/: mcversions.go  runner.go
crates/auth/: Cargo.toml
crates/auth/src/: flow.rs  lib.rs  storage.rs  user_info.rs
crates/auth/src/providers/: base.rs  elyby.rs  microsoft.rs  mod.rs  offline.rs  telegram.rs
crates/backend/: Cargo.toml
crates/backend/src/: catalog.rs  install.rs  instances.rs  launch.rs  lib.rs  local.rs  update.rs  versions.rs
crates/bridge/: Cargo.toml
crates/bridge/src/: handle.rs  lib.rs  message.rs
crates/build-config/: Cargo.toml  build.rs
crates/build-config/src/: lib.rs
crates/frontend/: Cargo.toml
crates/frontend/src/: lib.rs  processor.rs  root.rs  ui.rs
crates/frontend/src/component/: notifications.rs
crates/frontend/src/entity/: account.rs  backend.rs  instance.rs  java_resolve.rs  local_create.rs  mod.rs  notification.rs  settings.rs  update.rs
crates/frontend/src/pages/: instances.rs  mod.rs  update.rs
crates/generate/: Cargo.toml
crates/generate/src/: extra.rs  instance.rs  lib.rs  manifest.rs
crates/generate/src/loader/: fabric.rs  forge.rs
crates/i18n/: Cargo.toml  build.rs  locales.toml
crates/i18n/src/: generated.rs  lib.rs  locale.rs
crates/instance/: Cargo.toml
crates/instance-builder/: Cargo.toml  spec.example.json
crates/instance-builder/src/: main.rs  progress.rs  spec.rs
crates/instance/src/: asset_metadata.rs  assets.rs  authlib.rs  install_params.rs  instance_metadata.rs  lib.rs  manifest.rs  mod_sync.rs  overrides.rs  storage.rs  version_metadata.rs
crates/instance/src/mod_sync/: tests.rs
crates/instance_builder/: Cargo.toml  spec-hse.json
crates/instance_builder/src/: main.rs  spec.rs
crates/launcher/: Cargo.toml  build.rs
crates/launcher/src/: main.rs
crates/utils/: Cargo.toml
crates/utils/src/: adaptive_download.rs  compat.rs  files.rs  java.rs  lib.rs  logging.rs  logs.rs  mod_id.rs  paths.rs  progress.rs  utils.rs  vec_either_untagged.rs
docs/: creating-instances.md
frontend/src/components/: InstanceDetails.vue  InstanceForm.vue  InstanceFormFields.vue
frontend/src/composables/: useInstanceForm.ts
frontend/src/types/: api.ts
frontend/src/utils/: contentRules.ts
instance_builder/: Cargo.toml
instance_builder/src/: main.rs  progress.rs  spec.rs  utils.rs
instance_builder/src/generate/: sync.rs
launcher/: Cargo.toml  build.rs
launcher/src/: lang.rs
launcher/src/app/: auth_state.rs  colors.rs  instance_sync_state.rs  java_state.rs  launch_state.rs  launcher_app.rs  mod.rs  packwiz_provision_state.rs  theme.rs  unified_app.rs
launcher/src/config/: runtime_config.rs
launcher/src/version/: instance_storage.rs  sync.rs
packaging/: configure.py
packaging/flatpak/: generate.py  manifest-template.yml
packaging/nix/: package.nix
scripts/: .gitignore  merge_specs.py  remote-instance.example.json  remote-instance.py
scripts/ci/: build-launcher.sh  flatpak-manifest.sh  flatpak-sources.sh  install-linux-deps.sh  install-packaging-deps.sh  lib.sh  set-build-env.sh  upload-flatpak.sh  upload-launcher.sh
shared/: Cargo.toml
shared/src/: files.rs  java.rs  lib.rs
shared/src/generate/: extra.rs  manifest.rs
shared/src/packwiz/: build.rs  fetch.rs  mod.rs  model.rs
shared/src/version/: asset_metadata.rs  extra_version_metadata.rs  version_manifest.rs  version_metadata.rs
