[workspace]
members = ["launcher", "instance_builder", "shared", "crates/auth", "crates/instance", "crates/utils"]
resolver = "3"

[workspace.dependencies]
reqwest = { version = "0.13.1", features = ["json", "stream", "form"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["full"] }
log = "0.4.29"
async-trait = "0.1.89"
anyhow = { version = "1.0.100", features = ["backtrace"] }
open = "5.3.3"
dirs = "6.0.0"
env_logger = "0.11.8"
flate2 = "1.1.8"
maplit = "1.0.2"
futures = "0.3.31"
lazy_static = "1.5.0"
num_cpus = "1.17.0"
rand = "0.9.2"
sha1 = "0.10.6"
tar = "0.4.44"
tokio-util = "0.7.18"
clap = "4.5.54"
winapi = { version = "0.3.9", features = ["fileapi", "winbase"] }
winreg = "0.55.0"
zip = { version = "7.2.0", default-features = false, features = ["deflate"]}
url = "2.5.8"
relative-path = { version = "2.0.1", features = ["serde"] }

[profile.release-lto]
inherits = "release"
lto = true
