[package]
name = "launcher"
version = "1.0.0"
edition = "2024"
build = "build.rs"

[dependencies]
launcher-auth = { path = "../crates/auth" }
ctrlc = "3.5.1"
dirs.workspace = true
eframe = "0.33.3"
egui = "0.33.3"
egui_extras = { version = "0.33.3", features = ["image"] }
flate2.workspace = true
futures.workspace = true
image = { version = "0.25.9", features = ["png"], default-features = false }
lazy_static.workspace = true
maplit.workspace = true
num_cpus.workspace = true
open.workspace = true
qrcode = "0.14.1"
reqwest.workspace = true
rfd = "0.17.2"
self-replace = "1.5.0"
serde.workspace = true
serde_json.workspace = true
sha1.workspace = true
tar.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
zip.workspace = true
async-trait.workspace = true
log.workspace = true
anyhow.workspace = true
clap.workspace = true
rand.workspace = true
sys-info = "0.9.1"

[target.'cfg(windows)'.dependencies]
winapi.workspace = true
winreg.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2.180"

[build-dependencies]
winres = "0.1.12"

[package.metadata.bundle.bin.launcher]
