[package]
name = "shared"
version = "1.0.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
launcher-auth = { path = "../crates/auth" }
async-trait.workspace = true
dirs.workspace = true
env_logger.workspace = true
flate2.workspace = true
futures.workspace = true
lazy_static.workspace = true
log.workspace = true
maplit.workspace = true
num_cpus.workspace = true
rand.workspace = true
regex = "1.12.2"
reqwest.workspace = true
serde.workspace = true
serde-xml-rs = "0.8.2"
serde_json.workspace = true
sha1.workspace = true
tar.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
which = "8.0.0"
zip.workspace = true

[target.'cfg(windows)'.dependencies]
winapi.workspace = true
winreg.workspace = true
