[package]
name = "launcher-auth"
version = "0.1.0"
edition = "2024"

[dependencies]
hyper = { version = "1.8.1", features = ["full"] }
hyper-util = { version = "0.1.20", features = ["full"] }
tokio.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_urlencoded = "0.7.1"
log.workspace = true
async-trait.workspace = true
http-body-util = "0.1.3"
reqwest.workspace = true
oauth2 = "5.0.0"
uuid = { version = "1.21.0", features = ["serde", "v3", "v4"] }
open.workspace = true
