[package]
name = "launcher-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
instance = { path = "../instance" }
launcher-auth = { path = "../auth" }
launcher-build-config = { path = "../build-config" }
launcher-bridge = { path = "../bridge" }
log.workspace = true
relative-path.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
thiserror.workspace = true
url.workspace = true
uuid.workspace = true
launcher-i18n = { path = "../i18n" }
utils = { path = "../utils" }
zip.workspace = true

[target.'cfg(windows)'.dependencies]
winapi.workspace = true
winreg.workspace = true
