[package]
name = "instance"
version = "0.1.0"
edition = "2024"

[dependencies]
utils = { path = "../utils" }
launcher-auth = { path = "../auth" }
serde.workspace = true
tokio.workspace = true
reqwest.workspace = true
thiserror.workspace = true
serde_json.workspace = true
lazy_static.workspace = true
url.workspace = true
relative-path.workspace = true
log.workspace = true
uuid.workspace = true
