[package]
name = "launcher"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
dirs.workspace = true
launcher-backend = { path = "../backend" }
launcher-build-config = { path = "../build-config" }
launcher-bridge = { path = "../bridge" }
launcher-frontend = { path = "../frontend" }
log.workspace = true
tokio.workspace = true
utils = { path = "../utils" }
