[package]
name = "utils"
version = "0.1.0"
edition = "2024"

[dependencies]
futures.workspace = true
anyhow.workspace = true
log.workspace = true
reqwest.workspace = true
tokio.workspace = true
sha1.workspace = true
walkdir = "2.5.0"
num_cpus.workspace = true
thiserror.workspace = true
url.workspace = true
relative-path.workspace = true
flate2.workspace = true
regex = "1.12.2"
serde.workspace = true
serde_json.workspace = true
tar.workspace = true
lazy_static.workspace = true
which = "8.0.0"
zip.workspace = true
env_logger.workspace = true
